Implement context violation builder (#116)